# src/controllers/reservation.js
@@ -21,7 +21,6 @@ module.exports = {
             `
         */
 
-        // const result = await flight.find()
         const result = await res.getModelList(Reservation)
 
         res.status(200).send({
@@ -46,6 +45,54 @@ module.exports = {
             }
         */
 
+            const passengerInfos = req.body.passengers || []
+
+            let passengerIds = []
+            let invalidIds = []
+            let passenger = {}
+
+            for (let passengerInfo of passengerInfos){
+
+                if( typeof passengerInfo == 'object') {
+
+                    passenger = await Passenger.findOne ( {email : passengerInfo.email})
+
+                    if(passenger){
+
+                        passengerIds.push(passenger._id)
+                    }else{
+
+                        //Create passenger
+
+                        passenger = await Passenger.create({ ...passengerInfo, createdId: req.user._id})
+
+                        if( passenger) {
+                            passengerIds.push(passenger._id)
+                        }
+
+                    }
+
+                }else if( typeof passengerInfo == 'string'){
+
+                    //check if passenger exist
+
+                    passenger = await Passenger.findOne( {_id: passengerInfo})
+
+                    //send the id to passengerIds array
+
+                    if(passenger) passengerIds.push(passenger._id)
+            
+                }else{
+                    invalidIds.push(passengerInfo)
+                }
+
+            }
+
+            // console.log(passengerIds);
+            // console.log(invalidIds);
+
+            req.body.passengers = passengerIds
+
         const result = await Reservation.create(req.body)
 
         res.status(200).send({
@@ -63,7 +110,7 @@ module.exports = {
 
             const { createdId } = req.body
 
-        const result = await Reservation.findOne({ _id: req.params.id }).populate("createdId")
+        const result = await Reservation.findOne({ _id: req.params.id })
 
         res.status(200).send({
             error: false,
