# src/models/reservation.js
@@ -5,7 +5,30 @@
 
 const {mongoose} = require('../configs/dbConnection')
 
-const reservationSchema = new mongoose.Schema({
+/*
+{
+	"flightId": "652cebb3bae9cde5e8a9753b",
+	"passengers": [
+	  "652cf408b63b905ad13d9a87",
+	  "652cf408b63b905ad13d9a89",
+	  {
+		"firstName": "Test 11",
+		"lastName": "Test 11",
+		"email": "test11@site.com"
+	  },
+	  {
+		"firstName": "Test 12",
+		"lastName": "Test 12",
+		"email": "test12@site.com"
+	  },
+	],
+	"createdId": "652ceaa1bae9cde5e8a97522"
+  }
+
+  /* //----------------------------------------*/
+
+
+const ReservationSchema = new mongoose.Schema({
     flightId: {
         type: mongoose.Schema.Types.ObjectId,
         ref: 'Flight',
@@ -14,14 +37,16 @@ const reservationSchema = new mongoose.Schema({
 
     passengers:[
         {
-            type: mongoose.Schema.Types.Mixed,
-            ref: 'Passenger'
+            type: mongoose.Schema.Types.ObjectId,
+            ref: 'Passenger',
+            required:true
         }
     ],
 
     createdId: {
         type: mongoose.Schema.Types.ObjectId,
         ref: 'User',
+        required:true
     }
 
 
@@ -30,4 +55,4 @@ const reservationSchema = new mongoose.Schema({
     timestamps: true
 })
 
-module.exports = mongoose.model('Reservation', reservationSchema)
+module.exports = mongoose.model('Reservation', ReservationSchema)
